task is done v4 fix

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,16 @@
             android:theme="@style/Test.Theme.PlaylistMaker"/>
         <activity
             android:name=".MediaActivity"
-            android:exported="false" />
+            android:exported="false"
+            />
         <activity
             android:name=".SettingsActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Test.Theme.PlaylistMaker"/>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Main.Theme.PlaylistMaker">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
