--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,24 +16,10 @@
         android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.player.AudioPlayerActivity"
-            android:exported="false" />
-        <activity
-            android:name=".presentation.search.SearchActivity"
-            android:exported="false"
-            android:theme="@style/Test.Theme.PlaylistMaker" />
-        <activity
-            android:name=".presentation.media.MediaActivity"
-            android:exported="false"
-            android:theme="@style/Test.Theme.PlaylistMaker" />
-        <activity
-            android:name=".presentation.settings.SettingsActivity"
-            android:exported="false"
-            android:theme="@style/Test.Theme.PlaylistMaker" />
-        <activity
             android:name=".presentation.main.MainActivity"
             android:exported="true"
-            android:theme="@style/Main.Theme.PlaylistMaker">
+            android:theme="@style/Test.Theme.PlaylistMaker"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
